# Sentimenter

./: pyproject.toml
tests/: test_sentimenter.py
