[tool.poetry]
name = "sentimenter"
version = "0.1.0"
description = ""
authors = ["RajamannarAanjaram <rajamannaraanjaram@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.10.1"
bs4 = "0.0.1"
seaborn = "0.11.2"
textwrap3 = "0.9.2"
pylab-sdk = "1.3.2"
requests-oauthlib = "1.3.0"
transformers = "4.15.0"
scikit-learn = "1.0.2"
collection = "0.1.6"
GoogleNews = "1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
